tests/baselines/reference/templateStringsArrayTypeRedefinedInES6Mode.errors.txt
tests/cases/compiler/templateStringsArrayTypeRedefinedInES6Mode.ts(2,7): error TS2518: Only an ambient class can be merged with an interface.
tests/cases/compiler/templateStringsArrayTypeRedefinedInES6Mode.ts(8,3): error TS2345: Argument of type '{}' is not assignable to parameter of type 'TemplateStringsArray'.
  Property 'raw' is missing in type '{}'.


==== tests/cases/compiler/templateStringsArrayTypeRedefinedInES6Mode.ts (2 errors) ====
    
    class TemplateStringsArray {
          ~~~~~~~~~~~~~~~~~~~~
!!! error TS2518: Only an ambient class can be merged with an interface.
    }
    
    function f(x: TemplateStringsArray, y: number, z: number) {
    }
    
    f({}, 10, 10);
      ~~
!!! error TS2345: Argument of type '{}' is not assignable to parameter of type 'TemplateStringsArray'.
!!! error TS2345:   Property 'raw' is missing in type '{}'.
    
    f `abcdef${ 1234 }${ 5678 }ghijkl`;